--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -21,16 +21,16 @@ $image-breakpoints: (
 
 @mixin responsiveBg($path, $ext, $size) {
 
-  background-image: url( #{$path}-large.#{$ext});
+  // background-image: url( #{$path}-large.#{$ext});
 
-  @media  only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
-    background-image: url( #{$path}-xlarge.#{$ext});
-    background-size: $size;
-  }
+  // @media  only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi) {
+  //   background-image: url( #{$path}-xlarge.#{$ext});
+  //   background-size: $size;
+  // }
   
-  @each $breakpoint in $image-breakpoints {
-    @media(max-width: #{nth($breakpoint, 2)}) {
-      background-image: url( #{$path}-#{nth($breakpoint, 1)}.#{$ext});
-    }
-  }
+  // @each $breakpoint in $image-breakpoints {
+  //   @media(max-width: #{nth($breakpoint, 2)}) {
+  //     background-image: url( #{$path}-#{nth($breakpoint, 1)}.#{$ext});
+  //   }
+  // }
 }
