made language variables overrideable

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -3,7 +3,7 @@ $image-breakpoints: (
   'small': 320px
 )!default;
 
-$languages: 'de', 'es', 'fr', 'en-US';
+$languages: 'de', 'es', 'fr', 'en-US', 'nl' !default;
 
 
 
